# egress

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  cloudbuild.engine.yaml  cloudbuild.gateway.yaml  cloudbuild.market-data-mcp.yaml  cloudbuild.news-mcp.yaml  cloudbuild.positioning-mcp.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
agents/: __init__.py  agent_engine_app.py  cards.py  deploy_agent_engine.py
agents/analyst/: __init__.py  agent.py  baseline.py
agents/archetypes/: __init__.py  agent.py  baseline.py  prompts.py
agents/common/: __init__.py  env.py  schema.py  state.py  timing.py
agents/critic/: __init__.py  adjust.py  agent.py  baseline.py  compare.py  core.py  episode.py  schema.py
agents/orchestrator/: __init__.py  __main__.py  agent.py  driver.py  engine_bridge.py  memory_bridge.py  remote.py
agents/scenario_author/: __init__.py  agent.py  validation.py
docs/: EGRESS_BUILD.md  agents.md  contracts.md  evaluation.md  frontend.md  platform.md
docs/agent-cards/: egress-agents.json
docs/corpus/: cvna_2022.md  microstructure_limits.md  peer_crowding.md  sivb_2023.md
docs/replays/: aapl.analysis.txt  aapl.ndjson  cvna.analysis.txt  cvna.ndjson  flagship-42.analysis.txt  flagship-42.ndjson  sivb.analysis.txt  sivb.ndjson  spy.analysis.txt  spy.ndjson
engine/: __init__.py  __main__.py  attribution.py  baseline.py  core.py  ensemble.py  halt.py  presets.py  scenarios.py  schema.py  service.py  service_state.py
engine/metrics/: __init__.py  metrics.py
engine/orderbook/: __init__.py  book.py
engine/population/: __init__.py  (+3 more)
eval/: __init__.py  __main__.py  backtest.py  discrimination.py  episode_corpus.py  latency.py
gateway/: __init__.py  __main__.py  app.py  crisis.py  instruments.py  replay.py  run_config.py
mcp/: __init__.py  client.py
memory/: __init__.py  store.py
rag/: __init__.py  retriever.py
scripts/: check_vertex_auth.py  deployed_smoke.py  record_replays.py
tests/: __init__.py  conftest.py  test_agents_build.py  test_backtest.py  test_crisis.py  test_critic.py  test_engine.py  test_engine_service.py  test_ensemble.py  test_eval_phase6.py  test_fast_live.py  test_gateway_replay.py  test_gateway_tickers.py  test_halt_metrics.py  test_mcp_tools.py  test_orchestrator_baseline.py  test_orderbook.py  test_platform_phase7.py  test_population.py  test_positioning.py  test_replay.py  test_scaffold.py  test_scenario_to_archetype.py  test_schema.py  test_stats.py
web/: .env.example  Dockerfile  cloudbuild.yaml  next.config.mjs  package-lock.json  package.json
(+54 files in other folders)
