[project]
name = "egress"
version = "0.0.0"
description = "Egress AI — simulate how an investment position behaves in a crisis before the money is committed."
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
authors = [{ name = "The Egress Authors" }]
keywords = ["adk", "vertex-ai", "gemini", "mcp", "market-microstructure", "agent-based-simulation"]

# Core runtime deps shared everywhere. The deterministic engine depends ONLY on
# these — no cloud or LLM packages — so it runs on a laptop with zero credits.
dependencies = [
    "pydantic>=2.7",
    "numpy>=2.0",
]

[project.optional-dependencies]
# ADK agents + Gemini through Vertex AI. Never Google AI Studio.
agents = [
    "google-adk>=0.2",
    "google-cloud-aiplatform[agent-engines]>=1.60",
    "google-genai>=0.3",
]
# FastAPI gateway / BFF: WebSocket hub + A2A routing.
gateway = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "websockets>=12.0",
    "httpx>=0.27",
]
# FastAPI service wrappers for deterministic engine / platform smoke surfaces.
service = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]
# Model Context Protocol servers (market data, news).
mcp = [
    "mcp>=1.0",
]
# Data layer: Postgres + pgvector, Redis.
data = [
    "psycopg[binary]>=3.1",
    "pgvector>=0.2",
    "redis>=5.0",
]
# Everything, for a full local install.
all = [
    "egress[agents,gateway,service,mcp,data]",
]
# Dev tooling.
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# The top-level Python packages that make up Egress.
packages = ["agents", "engine", "mcp", "memory", "gateway", "rag"]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["agents", "engine", "mcp", "memory", "gateway", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
# Tests must run offline. conftest.py mocks google.auth so no network or
# credentials are required in CI.
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q"
filterwarnings = [
    # The ADK workflow agents (Sequential/Loop/Parallel) are required by the
    # competition rubric (AGENTS.md §4); ADK 2.2 deprecates them. Silence the
    # expected notice so the suite output stays readable.
    "ignore:.*(SequentialAgent|LoopAgent|ParallelAgent) is deprecated.*:DeprecationWarning",
]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
